NOJIRA: slowly animating overview panel to more easily demonstrate transition contrast issues.

--- a/src/components/overviewPanel/css/OverviewPanel.css
+++ b/src/components/overviewPanel/css/OverviewPanel.css
@@ -56,7 +56,7 @@
     min-height: 28em;
 
     /* Transition used to control hide/show of this container */
-    transition: all 0.2s linear;
+    transition: all 10s linear;
 }
 
 .fl-overviewPanel-container * {
@@ -153,7 +153,7 @@
     background-color: #333; /* IE8 */
     background-color: rgba(51,51,51,.96);
     line-height: 1.8em;
-    transition: background-color 0.2s ease;
+    transition: background-color 10s ease;
     outline: 0.2em solid #333;
     outline: 0.2em solid rgba(51,51,51,.96);
 }
@@ -173,14 +173,14 @@
     height: 100%;
 
     /* Fade out the overviewPanel contents. Otherwise it just disappears. */
-    transition: visibility 0.1s linear;
+    transition: visibility 10s linear;
     visibility:visible;
 }
 
 /* Demo Menu Visibility */
 
 .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-body {
-    transition: visibility 0.1s linear;
+    transition: visibility 10s linear;
     visibility: hidden;
 }
 
@@ -188,7 +188,7 @@
     /* Make this container essentially hidden. Some dimensions need to be given to avoid a problem with rendering on Safari. */
     width: 0.01em;
     height: 0.01em;
-    transition: all 0.2s linear; /* This transition creates the desired sliding effect. */
+    transition: all 10s linear; /* This transition creates the desired sliding effect. */
 }
 
 
@@ -203,7 +203,7 @@
 .fl-overviewPanel .fl-overviewPanel-title a {
     text-decoration: none;
     color: #fff;
-    transition: color 0.2s ease;
+    transition: color 10s ease;
 }
 
 .fl-overviewPanel .fl-overviewPanel-title a:hover {
@@ -253,7 +253,7 @@
 .fl-overviewPanel .fl-overviewPanel-links ul li a {
     color: #fff;
     text-decoration: none;
-    transition: color 0.2s ease;
+    transition: color 10s ease;
     width: 100%;
     text-align:center;
     display: inline-block;
@@ -290,7 +290,7 @@
     color: #333333;
     line-height: 1em;
     text-align: center;
-    transition: background-color 0.2s ease;
+    transition: background-color 10s ease;
 }
 
 .fl-overviewPanel .fl-overviewPanel-footer .fl-overviewPanel-links .fl-overviewPanel-links-icon:before {
